# Qt-desktop-barcode-reader

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  myvideosurface.cpp  myvideosurface.h  work.cpp  work.h
